# coc-village-generator

./: .gitignore  Cargo.toml  buildings  datasets  train
sandbox/: Cargo.toml
sprite_mess_generator/: Cargo.toml  shader.wgsl
sprite_mess_generator/src/: main.rs
src/: assets_render.rs  attack_simulation.rs  buidling.rs  cell.rs  label.rs  main.rs  pathfinding.rs  position.rs  render.rs  scenery.rs  troop.rs  village.rs  wall.rs
src/render/: building.rs  wall.rs
