[package]
name = "coc-base-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
imageproc = "0.25.0"
enum-assoc = "1.1.0"
rand = "0.9.0-alpha.1"
rand_derive2 = "0.1.21"
tokio = { version = "1.38.0", features = ["full"] }
lazy_static = "1.5.0"
clap = { version = "4.5.8", features = ["derive"] }
ab_glyph = "0.2.28"
